updating with latest log/user changes (building on mac to test)

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <meta charset="utf-8">
-    <title>45Studio Sharing Software</title>
+    <title>Flow by 45Studio</title>
   </head>
   <body class="h-full">
     <div id="app" class="h-full"></div>
